CSS: fix overflow nav

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ nav {
 	height:4.5vh;
 	font-size: 0.7em;
 	padding-left: 2em;
-	overflow-x: scroll;
+	overflow-x: auto;
 }
 nav h2 {
 	display:flex;
